//
// Copyright 2018, TeamDev. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//

syntax = "proto3";

package spine.examples.blog;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.examples.blog";
option java_package = "io.spine.examples.blog";
option java_outer_classname = "ModelsProto";
option java_multiple_files = true;
option java_generate_equals_and_hash = true;

import "blog/identifiers.proto";

// A Blog represents an informal discussion about a certain topic. Generally, it consists of informal
// text entries called BlogPosts.
//
message Blog {

    // A Blog ID.
    //
    BlogId id = 1 [(required) = true];

    // A title/name that usually defines the main topic of the Blog.
    //
    string name = 2;

    // A content of the Blog: a collection of published and draft BlogPosts.
    //
    repeated BlogPostId posts = 3;
}

// A BlogPost attached to a certain Blog.
//
message BlogPost {

    // A BlogPost ID.
    //
    BlogPostId id = 1 [(required) = true];

    // A title tells what the BlogPost is about and usually encalsulaptes the main topic in one sentence.
    //
    string title = 2;

    // A content with textual information uncovering the topic of the BlogPost.
    //
    string body = 3;

    // A Status represents the state of the BlogPost:
    // - DRAFT means that the text entry is not completed and should not be visible yet;
    // - PUBLISHED corresponds to the finished BlogPost that can be read by other people;
    // - DELETED states that the entry is removed and will not be made public anymore.
    //
    enum Status {
        DRAFT = 0;
        PUBLISHED = 1;
        DELETED = 2;
    }

    // A status defines the present state and visibility of the BlogPost.
    //
    Status status = 4;
}
